fix Discussion text overlap at 320px
Fixes a text overlap issue on the Discussion Index page
when the view width was set to 320px.

TEST PLAN:
 - Navigate to the Discussion Index page
 - Set browser width to 320px
 - Verify that the text "Ordered by Recent Activity" does not overlap
     with any other text

fixes KNO-245
flag=none

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/226168
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
QA-Review: Ahmad Amireh <ahmad@instructure.com>
Product-Review: Ahmad Amireh <ahmad@instructure.com>

--- a/app/stylesheets/bundles/discussions_index.scss
+++ b/app/stylesheets/bundles/discussions_index.scss
@@ -98,12 +98,6 @@
   position: relative;
 }
 
-.recent-activity-text-container {
-  position: absolute;
-  top: 4px;
-  #{direction(right)}: 4px;
-}
-
 .discussions-v2__container-image {
   padding: 12px;
   margin: 6px;
